--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -42,6 +42,7 @@ stages:
   jobs:
   - template: yaml/jobs/tenant-setup.yml
     parameters:
+      variableGroupName: ncs-b2c-test
       applicationName: $(applicationName)
       environmentName: test
       tenantId: $(testAzureB2cTenantId)
@@ -60,6 +61,7 @@ stages:
   jobs:
   - template: yaml/jobs/tenant-setup.yml
     parameters:
+      variableGroupName: ncs-b2c-dev
       applicationName: $(applicationName)
       environmentName: dev
       tenantId: $(devAzureB2cTenantId)
