--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -250,7 +250,7 @@ jobs:
             functionKey: $(armOutput.functionMasterKey)
             functionUrl: $(armOutput.functionUrl)
             productName: 'NCS Identity'
-            productRequiresSubscription: false
+            productRequiresSubscription: true
             publishContactEmail: 'paul.sheridan@digital.education.gov.uk'
             publishApiName: 'NCS Identity'
             publishApiOpenApiSchemaPath: '$(Build.SourcesDirectory)\definition.json'
