--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -63,6 +63,9 @@ parameters:
 - name: ncsDssGetCustomerUrlRoute
   type: string
 
+- name: ncsDigitalIdentityRoute
+  type: string
+
 - name: ncsDssCreateIdentityApiUrlRoute
   type: string
 
@@ -180,6 +183,7 @@ jobs:
       -NCSDSSCreateContactApiUrl "${{parameters.ncsDssApiRoot}}${{parameters.ncsDssCreateContactApiUrlRoute}}"
       -NCSDSSCreateIdentityApiUrl "${{parameters.ncsDssApiRoot}}${{parameters.ncsDssCreateIdentityApiUrlRoute}}"
       -NCSDSSGetCustomerUrl "${{parameters.ncsDssApiRoot}}${{parameters.ncsDssGetCustomerUrlRoute}}"
+      -NCSDigitalIdentityUrl "${{parameters.ncsDssApiRoot}}${{parameters.ncsDigitalIdentityRoute}}"
       -TouchpointId "${{parameters.touchpointId}}"
       -B2CGraphAccessClientId "${{parameters.graphAccessClientId}}"
       -B2CGraphAccessClientSecret "${{parameters.graphAccessClientSecret}}"
