--- a/tests/B2CAzureFunc.Tests/B2CAzureFunc.Tests.csproj
+++ b/tests/B2CAzureFunc.Tests/B2CAzureFunc.Tests.csproj
@@ -21,4 +21,11 @@
     <ProjectReference Include="..\..\src\Providers.Email\Providers.Email.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="local.settings.json">
+      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
