--- a/tests/B2CAzureFunc.Tests/B2CAzureFunc.Tests.csproj
+++ b/tests/B2CAzureFunc.Tests/B2CAzureFunc.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="local.settings.json">
+    <None Update="settings.json">
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
