--- a/src/B2CAzureFunc/local.settings.json
+++ b/src/B2CAzureFunc/local.settings.json
@@ -26,18 +26,18 @@
     "SignupConfirmationEmailSubject": "Complete your National Careers Service registration",
     "PasswordResetConfirmationEmailSubject": "Reset your password",
     "AccountActivationEmailExpiryInSeconds": "1",
-    "ncs-dss-search-api-url": "https://at.api.nationalcareersservice.org.uk/search/api/",
-    "ncs-dss-api-key": "92f1fe387ea14bab9567403c4c1d5e72",
-    "Ocp-Apim-Subscription-Key": "92f1fe387ea14bab9567403c4c1d5e72",
-    "ncs-dss-search-api-version": "v2",
+    "ncsdsssearchapiurl": "https://at.api.nationalcareersservice.org.uk/search/api/",
+    "ncsdssapikey": "92f1fe387ea14bab9567403c4c1d5e72",
+    "OcpApimSubscriptionKey": "92f1fe387ea14bab9567403c4c1d5e72",
+    "ncsdsssearchapiversion": "v2",
     "resendSignupEmail": "Activate your account",
-    "ncs-dss-create-customer-api-url": "https://at.api.nationalcareersservice.org.uk/customers/api/Customers/",
-    "ncs-dss-create-contact-api-url": "https://at.api.nationalcareersservice.org.uk/contactdetails/api/customers/{0}/ContactDetails/",
-    "ncs-dss-create-identity-api-url": "https://at.api.nationalcareersservice.org.uk/digitalidentities/api/identity",
+    "ncsdsscreatecustomerapiurl": "https://at.api.nationalcareersservice.org.uk/customers/api/Customers/",
+    "ncsdsscreatecontactapiurl": "https://at.api.nationalcareersservice.org.uk/contactdetails/api/customers/{0}/ContactDetails/",
+    "ncsdsscreateidentityapiurl": "https://at.api.nationalcareersservice.org.uk/digitalidentities/api/identity",
     "TouchpointId": "1000000000",
-    "b2c:Tenant": "devauthncs.onmicrosoft.com",
-    "b2c:GraphAccessClientId": "9e28727a-9abe-4d3b-80e8-367889846e1c",
-    "b2c:GraphAccessClientSecret": "S5EUqH6PyEI.2qqztYlC4Pqx.1B.~8GTe7",
+    "B2CTenantId": "devauthncs.onmicrosoft.com",
+    "B2CGraphAccessClientId": "9e28727a-9abe-4d3b-80e8-367889846e1c",
+    "B2CGraphAccessClientSecret": "S5EUqH6PyEI.2qqztYlC4Pqx.1B.~8GTe7",
     "EmailChangeConfirmationEmailSubjectNewEmail": "Email change request",
     "EmailChangeConfirmationEmailSubjectOldEmail": "Email change request",
     "B2CChangeEmailPolicy": "B2C_1A_changeemail",
@@ -49,9 +49,7 @@
     "NotifyPasswordResetConfirmationEmailTemplateId": "8dffe252-f532-49fc-9415-ebf332f33f00",
     "NotifyEmailChangeConfirmationEmailNewEmailTemplateId": "223634a9-58cd-4d56-9385-d7448993e11a",
     "NotifyEmailChangeConfirmationEmailOldEmailTemplateId": "a7147406-cf75-4100-a711-5aeea98e4ad9",
-    "ncs-dss-get-customer-api-url": "https://at.api.nationalcareersservice.org.uk/customers/api/Customers/{0}",
-
-    //new
-    "ncs-dss-patch-digitalidentity-api-url": "https://at.api.nationalcareersservice.org.uk/digitalidentities/api/customer/{0}"
+    "ncsdssgetcustomerapiurl": "https://at.api.nationalcareersservice.org.uk/customers/api/Customers/{0}",
+    "ncsdsspatchdigitalidentityapiurl": "https://at.api.nationalcareersservice.org.uk/digitalidentities/api/customer/{0}"
   }
 }
