--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -145,7 +145,7 @@ stages:
     parameters:
       variableGroupName: ncs-b2c-preprod
       applicationName: $(applicationName)
-      environmentName: 'preprod'
+      environmentName: 'test'
       functionServicePlanSkuName: $(functionServicePlanSkuName)
       functionServicePlanSkuTier: $(functionServicePlanSkuTier)
       functionServicePlanSkuCount: $(functionServicePlanSkuCount)
@@ -164,7 +164,7 @@ stages:
       ncsDssCreateIdentityApiUrlRoute: $(ncsDssCreateIdentityApiUrlRoute)
       ncsDssGetCustomerUrlRoute: $(ncsDssGetCustomerUrlRoute)
       ncsDigitalIdentityRoute: $(ncsDigitalIdentityRoute)
-      environmentId: 't02'
+      environmentId: 't01'
       serviceConnection: $(testServiceConnection)
       eapimServiceConnection: $(eapimServiceConnection)
       subscriptionId: $(testSubscriptionId)
