--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -102,9 +102,6 @@ parameters:
 - name: deploymentPrimaryLocation
   type: string
 
-- name: deploymentSecondaryLocation
-  type: string
-
 - name: policyCertThumbprint
   type: string
 
@@ -122,6 +119,10 @@ parameters:
 
 - name: notifyEmailChangeConfirmationEmailOldEmailTemplateId
   type: string
+
+- name: tncFileName
+  type: string
+  default: tncDetails.json
 
 - name: eapimEnvironmentName
   type: string
@@ -151,7 +152,6 @@ jobs:
       -servicePlanSkuName "${{parameters.functionServicePlanSkuName}}"
       -servicePlanSkuTier "${{parameters.functionServicePlanSkuTier}}"
       -servicePlanSkuCount "${{parameters.functionServicePlanSkuCount}}"
-      -secondaryStorageLocation "${{parameters.deploymentSecondaryLocation}}"
       -alertWebHookUrl "http://www.test.com"
       -B2CTenantShortName "${{parameters.environmentName}}${{parameters.applicationName}}"
       -B2CTenantFullName "${{parameters.environmentName}}${{parameters.applicationName}}.onmicrosoft.com"
@@ -192,7 +192,8 @@ jobs:
       -NotifySelfSignupEmailTemplateId "${{parameters.notifySelfSignupEmailTemplateId}}"
       -NotifyPasswordResetConfirmationEmailTemplateId "${{parameters.notifyPasswordResetConfirmationEmailTemplateId}}"
       -NotifyEmailChangeConfirmationEmailNewEmailTemplateId "${{parameters.notifyEmailChangeConfirmationEmailNewEmailTemplateId}}"
-      -NotifyEmailChangeConfirmationEmailOldEmailTemplateId "${{parameters.notifyEmailChangeConfirmationEmailOldEmailTemplateId}}"'
+      -NotifyEmailChangeConfirmationEmailOldEmailTemplateId "${{parameters.notifyEmailChangeConfirmationEmailOldEmailTemplateId}}"
+      -TncFileName "${{parameters.tncFileName}}"'
 
   strategy:
     runOnce:
