--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -261,3 +261,12 @@ jobs:
             eapimEnvironment: ${{parameters.eapimEnvironmentName}}
             namedValuesIncluded: true
             namedValuesFileName: '$(Build.SourcesDirectory)\eapim\namedValues\values.csv'
+
+        - task: AzureFileCopy@4
+          displayName: Upload T&Cs
+          inputs:
+            SourcePath: '$(Build.SourcesDirectory)\storage-upload\tncDetails.json'
+            azureSubscription: ${{parameters.serviceConnection}}
+            Destination: 'AzureBlob'
+            storage: authncs${{parameters.environmentName}}str1
+            ContainerName: 'terms-and-conditions'
