--- a/yaml/jobs/deploy-grouped.yml
+++ b/yaml/jobs/deploy-grouped.yml
@@ -95,6 +95,12 @@ parameters:
   - Oat
   - Production
 
+- name: eapimResourceGroupName
+  type: string
+
+- name: eapimServiceName
+  type: string
+
 - name: variableGroupName
   type: string
 
@@ -226,6 +232,18 @@ jobs:
             eapimEnvironment: ${{parameters.eapimEnvironmentName}}
             namedValuesIncluded: true
             namedValuesFileName: '$(Build.SourcesDirectory)\eapim\namedValues\values.csv'
+
+        - template: ../steps/enable-mock-policies.yml
+          parameters:
+            eapimServiceConnection: ${{parameters.eapimServiceConnection}}
+            eapimResourceGroupName: ${{parameters.eapimResourceGroupName}}
+            eapimServiceName: ${{parameters.eapimServiceName}}
+
+        - template: ../steps/clear-mock-policies.yml
+          parameters:
+            eapimServiceConnection: ${{parameters.eapimServiceConnection}}
+            eapimResourceGroupName: ${{parameters.eapimResourceGroupName}}
+            eapimServiceName: ${{parameters.eapimServiceName}}
 
         # - task: AzureFileCopy@4
         #   displayName: Upload T&Cs
