--- a/yaml/steps/clear-mock-policies.yml
+++ b/yaml/steps/clear-mock-policies.yml
@@ -15,5 +15,5 @@ steps:
     azureSubscription: ${{parameter.eapimServiceConnection}}
     ScriptType: 'FilePath'
     ScriptPath: '$(Build.SourcesDirectory)\scripts\ClearApimMockPolicies.ps1'
-    ScriptArguments: '-apimRg "${{parameters.eapimResourceGroupName}}" -apimServiceName "${{parameters.apimServiceName}}" -apimApiName "${{parameters.eapimApiName}}"'
+    ScriptArguments: '-apimRg "${{parameters.eapimResourceGroupName}}" -apimServiceName "${{parameters.eapimServiceName}}" -apimApiName "${{parameters.eapimApiName}}"'
     azurePowerShellVersion: 'LatestVersion'
