--- a/yaml/steps/enable-mock-policies.yml
+++ b/yaml/steps/enable-mock-policies.yml
@@ -14,6 +14,7 @@ parameters:
 
 steps:
 - task: AzurePowerShell@5
+  displayName: "Enable Mock Policies : ${{parameters.eapimServiceName}}"
   inputs:
     azureSubscription: ${{parameters.eapimServiceConnection}}
     ScriptType: 'FilePath'
