--- a/.vsts-ci-pr.yml
+++ b/.vsts-ci-pr.yml
@@ -9,6 +9,11 @@ resources:
       endpoint: DfE-Digital
       name: DFE-Digital/operations-devops-pipeline-templates
 
+pr:
+  branches:
+    include:
+    - develop
+    - master
 
 variables:
 - name: applicationName
@@ -30,70 +35,85 @@ stages:
       webPublish: false
       nugetConfigPath: nuget.config
 
-- stage: devTenantSetup
-  displayName: Tenant Setup - DEV
+- stage: devTenantMockSetup
+  displayName: Tenant Mock Setup - DEV
   dependsOn:
-    - build
+  - build
   jobs:
-  - template: yaml/jobs/tenant-setup.yml
+  - template: yaml/jobs/tenant-mocked-setup-grouped.yml
     parameters:
-      variableGroupName: ncs-b2c-dev
-      applicationName: $(applicationName)
       environmentName: dev
-      tenantId: $(devAzureB2cTenantId)
-      uploaderPrincipalClientId: $(devPipelineManagementClientId)
-      uploaderPrincipalClientSecret: $(devPipelineManagementClientSecret)
-      proxyAppRegistrationClientId: $(devProxyIdentityAppClientId)
-      proxyAppRegistrationObjectId: $(devProxyIdentityAppObjectId)
-      identAppRegistrationClientId: $(devIdentityAppClientId)
+      variableGroupName: ncs-b2c-preprod
+      applicationName: $(applicationName)
       signinRedirectRoot: s141d01-signin-int.azurewebsites.net
       eapimRootUrl: dev-api-customerengagement.platform.education.gov.uk
 
-- stage: deployDev
-  displayName: Deploy - DEV
-  dependsOn:
-  - build
-  - devTenantSetup
-  jobs:
-  - template: yaml/jobs/deploy.yml
+  - template: ../steps/enable-mock-policies.yml
     parameters:
-      variableGroupName: ncs-b2c-dev
+      eapimServiceConnection: ${{parameters.eapimServiceConnection}}
+      eapimResourceGroupName: ${{parameters.eapimResourceGroupName}}
+      eapimServiceName: ${{parameters.eapimServiceName}}
+
+
+  - template: yaml/jobs/tenant-mocked-setup-grouped.yml
+    parameters:
+      environmentName: dev
+      variableGroupName: ncs-b2c-preprod
       applicationName: $(applicationName)
-      environmentName: 'dev'
-      functionServicePlanSkuName: $(functionServicePlanSkuName)
-      functionServicePlanSkuTier: $(functionServicePlanSkuTier)
-      functionServicePlanSkuCount: $(functionServicePlanSkuCount)
-      b2cSignUpPolicy: $(b2cSignUpPolicy)
-      b2cSignupConfirmPolicy: $(b2cSignupConfirmPolicy)
-      b2cPasswordResetConfirmPoicy: $(b2cPasswordResetConfirmPoicy)
-      b2cChangeEmailPolicy: $(b2cChangeEmailPolicy)
-      b2cAuthorizationUrl: $(b2cAuthorizationUrl)
-      ncsApimSubscriptionKey: $(ncsApimSubscriptionKey)
-      ncsDssApiRoot: $(devNcsDssApiRoot)
-      ncsDssApiKey: $(ncsDevDssApiKey)
-      ncsDssSearchApiVersion: $(ncsDssSearchApiVersion)
-      ncsDssSearchApiUrlRoute: $(ncsDssSearchApiUrlRoute)
-      ncsDssCreateCustomerApiUrlRoute: $(ncsDssCreateCustomerApiUrlRoute)
-      ncsDssCreateContactApiUrlRoute: $(ncsDssCreateContactApiUrlRoute)
-      ncsDssCreateIdentityApiUrlRoute: $(ncsDssCreateIdentityApiUrlRoute)
-      ncsDssGetCustomerUrlRoute: $(ncsDssGetCustomerUrlRoute)
-      ncsDigitalIdentityRoute: $(ncsDigitalIdentityRoute)
-      environmentId: 'd01'
-      serviceConnection: $(devServiceConnection)
-      subscriptionId: $(devSubscriptionId)
-      relyingPartyAppClientId: $(devRelyAppClientId)
-      clientSigningKey: $(devClientSigningKey)
-      graphAccessClientId: $(devGraphAccessClientId)
-      graphAccessClientSecret: $(devGraphAccessClientSecret)
-      deploymentPrimaryLocation: $(deploymentPrimaryLocation)
-      policyCertThumbprint: $(devB2cApimCertThumbprint)
-      extensionAppId: $(parsedDevExtensionAppId)
-      notifyAidedSignupEmailTemplateId: $(devNotifyAidedSignupEmailTemplateId)
-      notifySelfSignupEmailTemplateId: $(devNotifySelfSignupEmailTemplateId)
-      notifyPasswordResetConfirmationEmailTemplateId: $(devNotifyPasswordResetConfirmationEmailTemplateId)
-      notifyEmailChangeConfirmationEmailNewEmailTemplateId: $(devNotifyEmailChangeConfirmationEmailNewEmailTemplateId)
-      notifyEmailChangeConfirmationEmailOldEmailTemplateId: $(devNotifyEmailChangeConfirmationEmailOldEmailTemplateId)
-      eapimServiceConnection: $(eapimServiceConnection)
-      eapimEnvironmentName: 'Development'
-      eapimResourceGroupName: c106d01-eapim-custeng
-      eapimServiceName: c106d01-apim-custeng
+      signinRedirectRoot: s141d01-signin-int.azurewebsites.net
+      eapimRootUrl: dev-api-customerengagement.platform.education.gov.uk
+
+  - template: ../steps/clear-mock-policies.yml
+    parameters:
+      eapimServiceConnection: ${{parameters.eapimServiceConnection}}
+      eapimResourceGroupName: ${{parameters.eapimResourceGroupName}}
+      eapimServiceName: ${{parameters.eapimServiceName}}
+
+# - stage: deployDev
+#   displayName: Deploy - DEV
+#   dependsOn:
+#   - build
+#   - devTenantSetup
+#   jobs:
+#   - template: yaml/jobs/deploy.yml
+#     parameters:
+#       variableGroupName: ncs-b2c-dev
+#       applicationName: $(applicationName)
+#       environmentName: 'dev'
+#       functionServicePlanSkuName: $(functionServicePlanSkuName)
+#       functionServicePlanSkuTier: $(functionServicePlanSkuTier)
+#       functionServicePlanSkuCount: $(functionServicePlanSkuCount)
+#       b2cSignUpPolicy: $(b2cSignUpPolicy)
+#       b2cSignupConfirmPolicy: $(b2cSignupConfirmPolicy)
+#       b2cPasswordResetConfirmPoicy: $(b2cPasswordResetConfirmPoicy)
+#       b2cChangeEmailPolicy: $(b2cChangeEmailPolicy)
+#       b2cAuthorizationUrl: $(b2cAuthorizationUrl)
+#       ncsApimSubscriptionKey: $(ncsApimSubscriptionKey)
+#       ncsDssApiRoot: $(devNcsDssApiRoot)
+#       ncsDssApiKey: $(ncsDevDssApiKey)
+#       ncsDssSearchApiVersion: $(ncsDssSearchApiVersion)
+#       ncsDssSearchApiUrlRoute: $(ncsDssSearchApiUrlRoute)
+#       ncsDssCreateCustomerApiUrlRoute: $(ncsDssCreateCustomerApiUrlRoute)
+#       ncsDssCreateContactApiUrlRoute: $(ncsDssCreateContactApiUrlRoute)
+#       ncsDssCreateIdentityApiUrlRoute: $(ncsDssCreateIdentityApiUrlRoute)
+#       ncsDssGetCustomerUrlRoute: $(ncsDssGetCustomerUrlRoute)
+#       ncsDigitalIdentityRoute: $(ncsDigitalIdentityRoute)
+#       environmentId: 'd01'
+#       serviceConnection: $(devServiceConnection)
+#       subscriptionId: $(devSubscriptionId)
+#       relyingPartyAppClientId: $(devRelyAppClientId)
+#       clientSigningKey: $(devClientSigningKey)
+#       graphAccessClientId: $(devGraphAccessClientId)
+#       graphAccessClientSecret: $(devGraphAccessClientSecret)
+#       deploymentPrimaryLocation: $(deploymentPrimaryLocation)
+#       policyCertThumbprint: $(devB2cApimCertThumbprint)
+#       extensionAppId: $(parsedDevExtensionAppId)
+#       notifyAidedSignupEmailTemplateId: $(devNotifyAidedSignupEmailTemplateId)
+#       notifySelfSignupEmailTemplateId: $(devNotifySelfSignupEmailTemplateId)
+#       notifyPasswordResetConfirmationEmailTemplateId: $(devNotifyPasswordResetConfirmationEmailTemplateId)
+#       notifyEmailChangeConfirmationEmailNewEmailTemplateId: $(devNotifyEmailChangeConfirmationEmailNewEmailTemplateId)
+#       notifyEmailChangeConfirmationEmailOldEmailTemplateId: $(devNotifyEmailChangeConfirmationEmailOldEmailTemplateId)
+#       eapimServiceConnection: $(eapimServiceConnection)
+#       eapimEnvironmentName: 'Development'
+#       eapimResourceGroupName: c106d01-eapim-custeng
+#       eapimServiceName: c106d01-apim-custeng
